# guru_das_chuvas

./: .dockerignore  .gitignore  Dockerfile  app.py  comparative_analysis.html  pyproject.toml  requirements.txt
apps/: comparative.py  exploratory.py  guru.py  sobre.py
data/: dataset_streamlit.csv  pr_mais_1_mun.csv  pr_mais_2_mun.csv  pr_mais_3_mun.csv
